--- a/ESDnevnik2023A.csproj
+++ b/ESDnevnik2023A.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Sifarnik.Designer.cs">
       <DependentUpon>Sifarnik.cs</DependentUpon>
     </Compile>
+    <Compile Include="Upisnica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Upisnica.Designer.cs">
+      <DependentUpon>Upisnica.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -103,6 +109,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Sifarnik.resx">
       <DependentUpon>Sifarnik.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Upisnica.resx">
+      <DependentUpon>Upisnica.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
